# gradle

./: .gitignore  CLAUDE.md  Cargo.toml  gradlew  settings.gradle.kts
.github/workflows/: rust-substrate-ci.yml  rust-substrate-cross-compile.yml  rust-substrate-drift-check.yml
architecture/: README.md  rust-substrate-architecture.md  rust-substrate-stabilization.md  tooling-api-substrate-bridge.md
architecture/upstream-map/: README.md  modules.toml  proto-lock.sha256  proto-versions.json
architecture/upstream-map/templates/: PARITY.template.md  UPSTREAM.template.md
build-logic-commons/gradle-plugin/: build.gradle.kts
contributing/: RustSubstrate.md
gradle/: verification-metadata.xml
gradle/dependency-management/: build.versions.toml  distribution.versions.toml
gradle/wrapper/: gradle-wrapper.properties
packaging/distributions-full/: build.gradle.kts
subprojects/composite-builds/: MIGRATION.md  PARITY.md  UPSTREAM.md
subprojects/core/: MIGRATION.md  PARITY.md  UPSTREAM.md  build.gradle.kts
subprojects/core-api/: MIGRATION.md  PARITY.md  UPSTREAM.md
subprojects/core/src/integTest/groovy/org/gradle/execution/commandline/: CommandLineIntegrationTest.groovy
subprojects/core/src/main/java/org/gradle/internal/service/scopes/: ExecutionBuildServices.java  VirtualFileSystemServices.java
substrate/: Cargo.toml  MIGRATION.md  PARITY.md  README.md  UPSTREAM.md  build.rs  link.txt  link_dir
substrate/benches/: cache_bench.rs  cache_orchestration_bench.rs  event_stream_bench.rs  execution_plan_bench.rs  file_fingerprint_bench.rs  hash_bench.rs  metrics_bench.rs  service_latency_bench.rs  task_graph_bench.rs
substrate/proto/v1/: bootstrap.proto  cache.proto  configuration.proto  execution.proto  filetree.proto  fingerprint.proto  ide.proto  incremental.proto  native_compile.proto  parser.proto  publishing.proto  reporting.proto  resources.proto  substrate.proto  taskgraph.proto  testexec.proto  toolchain.proto  versioncatalog.proto  worker.proto
substrate/scripts/: e2e-smoke-test.sh  launch-wrapper.sh  run-tests.sh
substrate/src/: error.rs  lib.rs  main.rs  unsafe_audit.rs
substrate/src/client/: jvm_host.rs  jvm_host_bridge.rs  mod.rs
substrate/src/server/: api_boundary.rs  artifact_publishing.rs  ast_extractor.rs  atomic_write.rs  authoritative.rs  bootstrap.rs  build_comparison.rs  build_event_stream.rs  build_init.rs  build_layout.rs  build_metrics.rs  build_model_cache.rs  build_operations.rs  build_plan_ir.rs  build_plan_shadow.rs  build_result.rs  build_script_parser.rs  build_script_types.rs  cache.rs  cache_orchestration.rs  capabilities.rs  classpath.rs  config_cache.rs  config_cache_ir.rs  configuration.rs  console.rs  control.rs  corruption_detection.rs  dag_executor.rs  dependency_resolution.rs  deterministic_cache.rs  event_dispatcher.rs  exec.rs  execution_history.rs  execution_plan.rs  file_fingerprint.rs  file_tree.rs  file_watch.rs  garbage_collection.rs  hash.rs  (+26 more)
substrate/src/server/groovy_parser/: ast.rs  lexer.rs  mod.rs  parser.rs
substrate/src/server/task_executor/: copy.rs  delete.rs  jar.rs  java_compile.rs  mkdir_op.rs  mod.rs  symlink.rs  sync.rs  test_exec.rs
substrate/tests/: benchmarks.rs  build_plan_ir_golden_test.rs  build_plan_shadow_test.rs  differential.rs  differential_test.rs  e2e_grpc_test.rs  e2e_lifecycle_test.rs  hash_compatibility_test.rs  integration_test.rs  memory_profile.rs  parser_fuzz.rs  parser_regression.rs
substrate/tests/differential/: build_comparison_differential_test.rs  build_plan_shadow_differential_test.rs  cache_differential_test.rs  execution_plan_differential_test.rs  hash_differential_test.rs
substrate/tests/golden/build_plan_ir/: simple-plan-v1-shuffled.json  simple-plan-v1.json
substrate/wrapper/: Cargo.toml
substrate/wrapper/src/: main.rs
tools/corpus_runner/: README.md  compare.py  discover.py  run.py
tools/stabilization/: run_strict_stabilization.sh
tools/upstream_map/: check_drift.sh  check_proto_lock.py  check_proto_lock.sh  discover_modules.py  proto_version.py  sync_from_origin.sh  sync_metadata.py  validate_map.py
