[workspace]
resolver = "2"
members = ["substrate"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
md-5 = "0.10"
thiserror = "1"
tempfile = "3"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
notify = { version = "6", features = ["macos_fsevent"] }
glob = "0.3"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
quick-xml = "0.31"
nix = { version = "0.27", features = ["signal", "process"] }
libc = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }
tower = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
