[package]
name = "gradle-substrate-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gradle-substrate-daemon"
path = "src/main.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
md-5.workspace = true
thiserror.workspace = true
dashmap.workspace = true
uuid.workspace = true
clap = { version = "4", features = ["derive", "env"] }
tower = "0.4"
tokio-stream = "0.1"
num_cpus = "1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile.workspace = true
