[package]
name = "gradle-substrate-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gradle-substrate-daemon"
path = "src/main.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
md-5.workspace = true
thiserror.workspace = true
dashmap.workspace = true
uuid.workspace = true
clap = { version = "4", features = ["derive", "env"] }
tower = "0.4"
tokio-stream = "0.1"
num_cpus = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
async-stream = "0.3"
futures-util = "0.3"
sha1 = "0.10"
sha2 = "0.10"
notify.workspace = true
glob.workspace = true
reqwest.workspace = true
quick-xml.workspace = true
nix.workspace = true
libc.workspace = true
zip = "2"
tar = "0.4"
flate2 = "1"
hyper-util = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
tower.workspace = true
hyper-util = "0.1"
http-body-util = "0.1"
tokio-stream = "0.1"
