[package]
name = "gradle-substrate-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gradle-substrate-daemon"
path = "src/main.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
md-5.workspace = true
thiserror.workspace = true
dashmap.workspace = true
uuid.workspace = true
clap = { version = "4", features = ["derive", "env"] }
tower = "0.4"
tokio-stream = "0.1"
num_cpus = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
async-stream = "0.3"
futures-util = "0.3"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1"
memchr = "2"
rayon = "1"
notify.workspace = true
reqwest.workspace = true
quick-xml.workspace = true
nix.workspace = true
libc.workspace = true
zip = "2"
tar = "0.4"
flate2 = "1"
crc32fast = "1"
hyper-util = "0.1"
serde_json = "1.0.149"

[features]
default = ["remote-cache", "xml-parsing", "toolchain-download"]
remote-cache = []
xml-parsing = []
toolchain-download = []

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
tower.workspace = true
hyper-util = "0.1"
http-body-util = "0.1"
tokio-stream = "0.1"
# jemalloc returns freed pages to the OS, preventing 150GB RSS when
# running 832+ tests in a single process (system malloc does not).
tikv-jemallocator = "0.6"

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "cache_orchestration_bench"
harness = false

[[bench]]
name = "execution_plan_bench"
harness = false

[[bench]]
name = "file_fingerprint_bench"
harness = false

[[bench]]
name = "event_stream_bench"
harness = false

[[bench]]
name = "task_graph_bench"
harness = false

[[bench]]
name = "metrics_bench"
harness = false

[[bench]]
name = "service_latency_bench"
harness = false

# Static linking for Linux musl targets
[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]

[target.aarch64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]
